- Fixed margin collapsing in Highlights Section.

--- a/css/styles.css
+++ b/css/styles.css
@@ -55,14 +55,13 @@
     text-align: center;
     background-color: #332f2ff1;
     color: white;
+    padding: 24px; /* we add padding here to eliminate a margin collapsing bewtween h2 and the header section*/
 }
 
 #highlights h2{
     text-transform: uppercase;
     font-size: 40px;
-    margin-top: 0;
-    padding: 10px;
-    padding-top: 30px;
+    margin-top: 20px;
 }
 
 #destinations{
@@ -99,3 +98,7 @@
     padding: 2px 0;
     border-radius: 5px;
 }
+
+/* footer{
+    background-color: black;
+} */
